fix: remove blue background from every element
When user clicks on any Clickable element it will be highlighted with
blue background. This is not good for user experience.
We need to remove this blue background from every element.

Changes to be committed:
	modified:   apps/toctive-blog/frontend/pages/styles.css

--- a/apps/toctive-blog/frontend/pages/styles.css
+++ b/apps/toctive-blog/frontend/pages/styles.css
@@ -2,11 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-input,
-textarea,
-button,
-select,
-a {
+* {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
