--- a/apps/toctive-blog/frontend/pages/styles.css
+++ b/apps/toctive-blog/frontend/pages/styles.css
@@ -4,6 +4,8 @@
 
 * {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -moz-tap-highlight-color: rgba(0, 0, 0, 0);
+  -tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 body {
