--- a/apps/fast-metro/app/src/styles.css
+++ b/apps/fast-metro/app/src/styles.css
@@ -2,3 +2,8 @@
 @tailwind components;
 @tailwind base;
 @tailwind utilities;
+
+* {
+  -webkit-tap-highlight-color: transparent;
+  -moz-tap-highlight-color: transparent;
+}
