Change the style of the navigation bar
Changes to be committed:
	modified:   apps/fast-metro/app/src/components/layout/BottomNavigation/BottomNavigation.tsx
	modified:   apps/fast-metro/app/src/styles.css

--- a/apps/fast-metro/app/src/styles.css
+++ b/apps/fast-metro/app/src/styles.css
@@ -7,3 +7,7 @@
   -webkit-tap-highlight-color: transparent;
   -moz-tap-highlight-color: transparent;
 }
+
+.nav-shadow {
+  box-shadow: rgb(0 0 0 / 50%) 0px -5px 23px -15px;
+}
