--- a/apps/true-metro/app/src/styles.css
+++ b/apps/true-metro/app/src/styles.css
@@ -25,3 +25,9 @@
 ::-webkit-scrollbar-thumb {
   background: transparent;
 }
+
+.swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction {
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
